name:                royal-game-of-ur
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GrandmasterShadowMorgue/royal-game-of-ur#readme
license:             BSD3
license-file:        LICENSE
author:              Jayant Shivarajan
maintainer:          jayant.shivarajan@gmail.com
copyright:           (c) 2017 Jayant Shivarajan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable royal-game-of-ur-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , royal-game-of-ur
  default-language:    Haskell2010

test-suite royal-game-of-ur-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , royal-game-of-ur
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GrandmasterShadowMorgue/royal-game-of-ur
